log
do., 24 de abr. de 2022 14:26:28: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++++-----
 1 file changed, 37 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   TreeNode * aux->root= createTreeNode(key1);
                 ^~
treemap.c:41:17: error: expected expression before '->' token
treemap.c:41:40: error: 'key1' undeclared (first use in this function)
   TreeNode * aux->root= createTreeNode(key1);
                                        ^~~~
treemap.c:41:40: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:25: error: too few arguments to function 'createTreeNode'
   TreeNode * aux->root= createTreeNode(key1);
                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:42:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   TreeNode * aux->current=createTreeNode(key2);
                 ^~
treemap.c:42:17: error: expected expression before '->' token
treemap.c:42:42: error: 'key2' undeclared (first use in this function)
   TreeNode * aux->current=createTreeNode(key2);
                                          ^~~~
treemap.c:42:27: error: too few arguments to function 'createTreeNode'
   TreeNode * aux->current=createTreeNode(key2);
                           ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c: In function 'insertTreeMap':
treemap.c:59:11: error: expected ')' before 'valor'
   if((int valor=tree->lower_than(tree->root,key)==1){
           ^~~~~
treemap.c:60:5: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     tree->current=tree->root;
     ^~~~
treemap.c:60:5: note: (near initialization for '(anonymous)')
treemap.c:60:29: error: expected '}' before ';' token
     tree->current=tree->root;
                             ^
treemap.c:77:1: error: expected ')' before '}' token
 }
 ^
treemap.c:77:1: error: expected expression before '}' token
treemap.c: In function 'minimum':
treemap.c:83:3: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
treemap.c:87:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
     return x;
     ^~~~~~
treemap.c: In function 'firstTreeMap':
treemap.c:125:9: error: expected ';' before '}' token
         }
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
911abe0
do., 24 de abr. de 2022 19:00:00: 
 treemap.c | 32 ++++++++++++++++++--------------
 1 file changed, 18 insertions(+), 14 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   TreeNode * aux->root= createTreeNode(key1);
                 ^~
treemap.c:41:17: error: expected expression before '->' token
treemap.c:41:40: error: 'key1' undeclared (first use in this function)
   TreeNode * aux->root= createTreeNode(key1);
                                        ^~~~
treemap.c:41:40: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:25: error: too few arguments to function 'createTreeNode'
   TreeNode * aux->root= createTreeNode(key1);
                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:42:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
   TreeNode * aux->current=createTreeNode(key2);
                 ^~
treemap.c:42:17: error: expected expression before '->' token
treemap.c:42:42: error: 'key2' undeclared (first use in this function)
   TreeNode * aux->current=createTreeNode(key2);
                                          ^~~~
treemap.c:42:27: error: too few arguments to function 'createTreeNode'
   TreeNode * aux->current=createTreeNode(key2);
                           ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:43:7: error: unused variable 'valor' [-Werror=unused-variable]
   int valor=aux->lower_than(key1,key2);
       ^~~~~
treemap.c: In function 'minimum':
treemap.c:73:3: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
treemap.c:77:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
     return x;
     ^~~~~~
treemap.c: In function 'firstTreeMap':
treemap.c:115:9: error: expected ';' before '}' token
         }
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
a245a59
do., 24 de abr. de 2022 19:00:20: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:73:3: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
treemap.c:77:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
     return x;
     ^~~~~~
treemap.c: In function 'firstTreeMap':
treemap.c:115:9: error: expected ';' before '}' token
         }
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
66ae0d1
do., 24 de abr. de 2022 19:01:22: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
C:\Users\Admin\AppData\Local\Temp\cckBg1ay.o:test.c:(.text+0x474): undefined reference to `createTreeMap'
C:\Users\Admin\AppData\Local\Temp\cckBg1ay.o:test.c:(.text+0x794): undefined reference to `insertTreeMap'
C:\Users\Admin\AppData\Local\Temp\cckBg1ay.o:test.c:(.text+0x82a): undefined reference to `insertTreeMap'
collect2.exe: error: ld returned 1 exit status
Compilation failed
ad59e45
do., 24 de abr. de 2022 19:23:10: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:25: error: 'key1' undeclared (first use in this function)
   int result=lower_than(key1,key2);
                         ^~~~
treemap.c:41:25: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:30: error: 'key2' undeclared (first use in this function)
   int result=lower_than(key1,key2);
                              ^~~~
treemap.c:44:18: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   aux->lower_than=result;
                  ^
treemap.c: In function 'insertTreeMap':
treemap.c:50:11: error: expected ')' before 'valor'
   if((int valor=tree->lower_than(tree->root,key)==1){
           ^~~~~
treemap.c:51:5: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     tree->current=tree->root;
     ^~~~
treemap.c:51:5: note: (near initialization for '(anonymous)')
treemap.c:51:29: error: expected '}' before ';' token
     tree->current=tree->root;
                             ^
treemap.c:68:1: error: expected ')' before '}' token
 }
 ^
treemap.c:68:1: error: expected expression before '}' token
cc1.exe: all warnings being treated as errors
Compilation failed
b23703d
